Security Group/main.tf
data "aws_security_group" "default_sg" {
  vpc_id = var.vpc_id-01
  filter {
    name = "group-name"
    values = [ "default" ]
  }
}
# security group for public
resource "aws_security_group" "SG-01" {
  vpc_id      = var.aws_vpc
  ingress  {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress  {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = var.aws_SG_public
  }
}
# security group for private
resource "aws_security_group" "SG-02" {
  vpc_id      = var.aws_vpc
  
  ingress  {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress  {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress  {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress  {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress  {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress  {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = -1                # ICMP allows -1 for all types
    to_port     = -1                # ICMP allows -1 for all codes
    protocol    = "icmp"
    cidr_blocks = []
    security_groups = [data.aws_security_group.default_sg.id] # Allow traffic from the default SG
    ipv6_cidr_blocks = []
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = var.aws_SG_private
  }
}
